[package]
name = "ever-elect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
minik2 = { git = "https://github.com/jouliene/minik2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "time"] }
