[package]
name = "ever-elect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
minik2 = { git = "https://github.com/jouliene/minik2", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "time"] }
